<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.acceso.sqlutils</groupId>
    <artifactId>sqlutils</artifactId>
    <name>sqlutils</name>
    <description>Utilidades para el acceso a bases de datos SQL con JDBC</description>
    <version>3.1.0</version>

    <developers>
        <developer>
            <id>josem-dam</id>
            <name>José Miguel Sánchez Alés</name>
            <email>jsanale860@g.educaand.es</email>
        </developer>
    </developers>

    <properties>
        <!-- jitpack no reconoce release -->
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <profiles>
        <!-- Para que "maven clean -Pclean-javadoc-only" sólo borre la documentación -->
        <profile>
            <id>clean-javadoc-only</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-clean-plugin</artifactId>
                        <configuration>
                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                            <filesets>
                                <fileset>
                                    <directory>${project.basedir}/target/reports/apidocs</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
 
    <build>
        <plugins>
            <!-- Para generar la documentación en docs/apidocs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <!-- La última versión puede consultarse en el repositorio de Maven -->
                <version>3.11.2</version>
                <configuration>
                    <source>21</source>   <!-- Versión de Java utilizada -->
                    <show>public</show> 
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.1.0-alpha1</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>6.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.30.2-GA</version>
        </dependency>

        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.51.1.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>